--- a/app.json
+++ b/app.json
@@ -9,14 +9,17 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.bhankymyk.MarvelMovies"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#1a1a1a",
+        "foregroundImage": "./assets/images/icon.png",
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.bhankymyk.MarvelMovies"
     },
     "web": {
       "output": "static",
@@ -28,12 +31,8 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/icon.png",
-          "imageWidth": 200,
-          "resizeMode": "cover",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
+          "resizeMode": "contain",
+          "backgroundColor": "#000000"
         }
       ]
     ],
